--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,31 @@
 server.port=8080
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:ecommercedb;DB_CLOSE_DELAY=-1
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
 
-# MyBatis Configuration
-# ?? Mapper.xml ?????
+# ==================== MySQL Configuration ====================
+# ?????URL????????????
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+# ?????? (??????)
+spring.datasource.username=root
+# ????? (???????????)
+spring.datasource.password=your_password_here
+# ??MySQL??
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+# ==================== MyBatis Configuration ====================
+# MyBatis Mapper.xml ?????
 mybatis.mapper-locations=classpath:mapper/*.xml
-# ?????????????
+# ??????????
 mybatis.configuration.map-underscore-to-camel-case=true
 
-# Swagger-UI path configuration
+
+# ==================== Swagger-UI path configuration ====================
 springdoc.swagger-ui.path=/swagger-ui.html
+
+
+# ==================== H2 In-Memory DB (?????????) ====================
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
+# spring.datasource.url=jdbc:h2:mem:ecommercedb;DB_CLOSE_DELAY=-1
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=
