--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce?useSSL=false&serverT
 # ?????? (??????)
 spring.datasource.username=root
 # ????? (???????????)
-spring.datasource.password=your_password_here
+spring.datasource.password=root
+
 # ??MySQL??
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
